--- a/y/libp2p/muxers/mplex/mplex.html
+++ b/y/libp2p/muxers/mplex/mplex.html
@@ -376,7 +376,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../muxer.html#formatItIMPL.t,Muxer"><span class="Identifier">formatItIMPL</span></a>, <a href="../muxer.html#new,typedesc[MuxerProvider],MuxerConstructor,string"><span class="Identifier">new</span></a>, <a href="../muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a>, <a href="../muxer.html#close.e,Muxer"><span class="Identifier">close</span></a>, <a href="../muxer.html#shortLog,Muxer"><span class="Identifier">shortLog</span></a>, <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a>, <a href="../muxer.html#MuxerConstructor"><span class="Identifier">MuxerConstructor</span></a>, <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a>, <a href="../muxer.html#newStream.e,Muxer,string,bool"><span class="Identifier">newStream</span></a>, <a href="../muxer.html#DefaultChanTimeout"><span class="Identifier">DefaultChanTimeout</span></a>, <a href="../muxer.html#MuxerHandler"><span class="Identifier">MuxerHandler</span></a>, <a href="../muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>, <a href="../muxer.html#TooManyChannels"><span class="Identifier">TooManyChannels</span></a>, <a href="../muxer.html#handle.e,Muxer"><span class="Identifier">handle</span></a>
+<a href="../muxer.html#formatItIMPL.t,Muxer"><span class="Identifier">formatItIMPL</span></a>, <a href="../muxer.html#new,typedesc[MuxerProvider],MuxerConstructor,string"><span class="Identifier">new</span></a>, <a href="../muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a>, <a href="../muxer.html#closeX.e,Muxer,tuple[string,int,int]"><span class="Identifier">closeX</span></a>, <a href="../muxer.html#close.t,Muxer"><span class="Identifier">close</span></a>, <a href="../muxer.html#shortLog,Muxer"><span class="Identifier">shortLog</span></a>, <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a>, <a href="../muxer.html#MuxerConstructor"><span class="Identifier">MuxerConstructor</span></a>, <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a>, <a href="../muxer.html#newStream.e,Muxer,string,bool"><span class="Identifier">newStream</span></a>, <a href="../muxer.html#DefaultChanTimeout"><span class="Identifier">DefaultChanTimeout</span></a>, <a href="../muxer.html#MuxerHandler"><span class="Identifier">MuxerHandler</span></a>, <a href="../muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>, <a href="../muxer.html#TooManyChannels"><span class="Identifier">TooManyChannels</span></a>, <a href="../muxer.html#handle.e,Muxer"><span class="Identifier">handle</span></a>
 </dl></div>
 
   </div>
@@ -386,7 +386,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-28 14:25:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 13:59:47 UTC</small>
       </div>
     </div>
   </div>
